--- a/_config.yml
+++ b/_config.yml
@@ -75,7 +75,7 @@ twitter_username: TianHan10 # your Twitter handle
 mastodon_username: # your mastodon instance+username in the format instance.tld/@username
 linkedin_username: # your LinkedIn user name
 telegram_username: # your Telegram user name
-scholar_userid: Qtvu5t4AAAAJ&hl=zh-CN # your Google Scholar ID
+scholar_userid: Qtvu5t4AAAAJ&hl=en # your Google Scholar ID
 semanticscholar_id: # your Semantic Scholar ID
 whatsapp_number: # your WhatsApp number (full phone number in international format. Omit any zeroes, brackets, or dashes when adding the phone number in international format.)
 orcid_id: # your ORCID ID
